Add mac-only "Set Up Automatic Updates..." button to the new about page.

A mac-only "Set Up Automatic Updates for All Users" button existed in
the old crome://help page, but was not ported over to the
chrome://md-settings/help page. This CL aims to port that button over.

By Scott Chen <scottchen@chromium.org> (http://crrev.com/2538013002)

BUG=649187
TBR=dpapad@chromium.org (LG'd on other CL)
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2583743002
Cr-Commit-Position: refs/heads/master@{#439368}

Former-commit-id: 3109d3ea42d98c9f2831b96374b5a9cee68ab7d2