chrome/browser/ui/webui/help/version_updater_mac.mm
@@ -237,11 +237,20 @@ void VersionUpdaterMac::UpdateStatus(NSDictionary* dictionary) {
   if (!status_callback_.is_null())
     status_callback_.Run(status, 0, message);
 
+  PromotionState promotion_state;
   if (!promote_callback_.is_null()) {
-    PromotionState promotion_state = PROMOTE_HIDDEN;
-    if (show_promote_button_)
-      promotion_state = enable_promote_button ? PROMOTE_ENABLED
-                                              : PROMOTE_DISABLED;
+    KeystoneGlue* keystone_glue = [KeystoneGlue defaultKeystoneGlue];
+    if (keystone_glue && [keystone_glue isAutoupdateEnabledForAllUsers]) {
+      promotion_state = PROMOTED;
+    } else {
+      promotion_state = PROMOTE_HIDDEN;
+
+      if (show_promote_button_) {
+        promotion_state = enable_promote_button ? PROMOTE_ENABLED
+                                                : PROMOTE_DISABLED;
+      }
+    }
+
     promote_callback_.Run(promotion_state);
   }
 }
